<resources>
    <string translatable="false" name="app_name">Arak</string>
    <string name="facebook_app_id" translatable="false">320347669697458</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb320347669697458</string>
    <string name="google_ad_mobe_id" translatable="false">ca-app-pub-7303745888048368~8949417589</string>
    <string name="google_ad_mobe_banner_id" translatable="false">ca-app-pub-7303745888048368/3134494481</string>
    <string name="google_ad_mobe_Interstitial_id" translatable="false">ca-app-pub-4090726192636805/9295723638</string>
    <string name="google_ad_mobe_test_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="google_ad_mobe_test_Interstitial_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="google_ad_mobe_test_Native_ad_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="Your_GPS">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="map_key" translatable="false">AIzaSyBtJjD9Pnvd8x592yo5A5q9BW1wOUmP18c</string>
    <string-array name="gender_array_en" translatable="false">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="gender_array_ar" translatable="false">
        <item>الجنس</item>
        <item>ذكر</item>
        <item>انثى</item>
    </string-array>
    <string name="title_home">Home</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_Store">Store</string>
    <string name="title_add">Add</string>
    <string name="title_arak_store">Arak Store</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="AD">AD</string>
    <string name="registration_activity_title">Join Arak</string>
    <string name="registration_activity_full_name">Full Name</string>
    <string name="registration_activity_desc">Sign up today and enjoy adding your Ads and Stores.</string>
    <string name="registration_activity_Business_Name">Business Name (Optional)</string>
    <string name="registration_activity_email">Email</string>
    <string name="registration_activity_password">Password</string>
    <string name="registration_activity_Confirm_password">Confirm Password</string>
    <string name="registration_activity_date_of_birth">Date Of Birth</string>
    <string name="registration_activity_phone_number">Enter Phone Number</string>
    <string name="registration_activity_Sign_up">Sign up</string>
    <string name="registration_activity_Terms">By signing up, you agree to our Terms &amp; Conditions and Privacy Policy.</string>
    <string name="registration_activity_Login_Facebook">Log in with Facebook</string>
    <string name="registration_activity_have_wallet">Do you have a wallet?</string>
    <string name="registration_activity_Login_gmail">Sign in with Google</string>
    <string name="registration_activity_Have_account">Have an account? Log In</string>
    <string name="registration_activity_or">or</string>
    <string name="registration_activity_yes">Yes</string>
    <string name="registration_activity_no">No</string>
    <string name="login_activity_welcome">Welcome</string>
    <string name="login_activity_thousands_registered_members">Join us for free and be one of the thousands of registered members</string>
    <string name="login_activity_email">email</string>
    <string name="login_activity_password">password</string>
    <string name="login_activity_Login">Log in</string>
    <string name="login_activity_Login_guest">Login as a guest</string>
    <string name="login_activity_Forget_password">Forget password?</string>
    <string name="login_activity_Login_Facebook">Log in with Facebook</string>
    <string name="login_activity_Login_Google">Sign in with Google</string>
    <string name="login_activity_Sign_up">Don\'t have an account? Sign up</string>
    <string name="login_activity_as_guest">Login as a guest</string>
    <string name="settings_activity_settings">Settings</string>
    <string name="settings_activity_General">General</string>
    <string name="settings_activity_Notifications">Notifications</string>
    <string name="settings_activity_Language">Language</string>
    <string name="settings_activity_Feedback">Feedback</string>
    <string name="settings_activity_terms">Terms &amp; Condition</string>
    <string name="settings_activity_About_us">About us</string>
    <string name="settings_activity_Need_Help">Need Help?</string>
    <string name="settings_activity_Legal">Legal</string>
    <string name="settings_activity_Privacy">Privacy</string>
    <string name="normal_ads_activity_title">Paid Ads</string>
    <string name="home_activity_Add_Store">Add Your Store</string>
    <string name="home_activity_home">Home</string>
    <string name="home_activity_Wallet">Wallet</string>
    <string name="home_activity_Stores">Stores</string>
    <string name="home_activity_Products">Products</string>
    <string name="home_activity_More">More</string>
    <string name="user_intrest_title">Choose your interests</string>
    <string name="home_search">Search</string>
    <string name="home_frag_search">Search videos,images and many more</string>
    <string name="home_frag_Watched_Ads">Watched Ads</string>
    <string name="home_frag_learn_more">Learn More</string>
    <string name="home_frag_featured_ads">Featured ads</string>
    <string name="home_frag_See_more">See more</string>
    <string name="home_frag_Normal_ads">Normal ads</string>
    <string name="home_frag_Suggestions_Stores">Suggestions Of Stores</string>
    <string name="home_frag_filtration_options">Filtration Options</string>
    <string name="home_frag_electoral_district">Electoral District</string>
    <string name="home_frag_electoral_candidates">Candidates For Parliamentary Elections</string>
    <string name="wallet_frag_Earning">Earning</string>
    <string name="wallet_frag_Withdraw">Withdraw</string>
    <string name="wallet_frag_Make_An_Ad">Make An Ad</string>
    <string name="wallet_frag_ACTIVITIES">ACTIVITIES</string>
    <string name="wallet_frag_Enter_Coupon_Code">Enter Coupon Code</string>
    <string name="wallet_frag_From">From</string>
    <string name="wallet_frag_To">To</string>
    <string name="cliq_activity_title">Cliq</string>
    <string name="cliq_activity_add_attachment">Add Attachment</string>
    <string name="cliq_activity_desc">Please enter the deposit amount</string>
    <string name="cliq_activity_save">Save</string>
    <string name="cliq_activity_text_copied">Text Copied</string>
    <string name="cliq_activity_no_text_to_copied">No text to copy</string>
    <string name="cliq_activity_copied_Text">Copied Text</string>
    <string name="store_frag_Search_Stores">Search Stores</string>
    <string name="store_frag_Search_in_Stores">Find your needs in stores</string>
    <string name="service_frag_Arak_Service">Arak Services</string>
    <string name="service_frag_Arak_Ranking">Arak Ranking</string>
    <string name="profile_frag_My_Detail">My Profile</string>
    <string name="profile_frag_My_Ads">My Ads</string>
    <string name="profile_frag_History">History</string>
    <string name="profile_frag_My_Favorite">Favorite</string>
    <string name="profile_frag_My_Store">My Store</string>
    <string name="profile_frag_My_Products">My Products</string>
    <string name="profile_frag_Change_Password">Change Password</string>
    <string name="profile_frag_Logout">Logout</string>
    <string name="My_Detail_activity_save_changes">Save Changes</string>
    <string name="change_Phone_Number_activity_Reset_Phone_Number">Reset Phone Number</string>
    <string name="change_Phone_Number_activity_Please_enter_New_Phone_Number">Please Enter Your New Phone Number</string>
    <string name="change_Phone_Number_activity_Please_enter_Current_Phone_Number">Please Enter Your Current Phone Number</string>
    <string name="change_Phone_Number_activity_New_Phone_Number">New Phone Number</string>
    <string name="change_Phone_Number_activity_Current_Phone_Number">Current Phone Number</string>
    <string name="forget_password_activity_Forget_Your_Password">Forget Your Password</string>
    <string name="forget_password_activity_Reset_enter_email">Please enter your Phone Number</string>
    <string name="forget_password_activity_Next">Next</string>
    <string name="forget_password_activity_Back">Back</string>
    <string name="Code_Verification_activity_Almost_There">Almost There!</string>
    <string name="Code_Verification_activity_Please_enter_ottp_number">Please enter the ottp number. The number has been sent to your phone</string>
    <string name="Code_Verification_activity_second_left">remaining seconds</string>
    <string name="Code_Verification_activity_Resend_Code">Resend Code</string>
    <string name="ad_type_activity_title">Ad Type</string>
    <string name="election_details_activity_governorate">Governorate</string>
    <string name="election_details_activity_electoral_district">Electoral District</string>
    <string name="election_details_activity_bloc_membership">Bloc Membership</string>
    <string name="rest_password_activity_Change_Your_Password">Change Your Password</string>
    <string name="rest_password_activity_enter_new_password">Please enter a new password and confirm the password</string>
    <string name="rest_password_activity_Submit">Submit</string>
    <string name="rest_password_activity_confirm_password">confirm password</string>
    <string name="rest_password_activity_current_password">current password</string>
    <string name="rest_password_activity_new_password">new password</string>
    <string name="Category_Packages_activity_Image_Ads">Image Ads</string>
    <string name="Category_Packages_activity_Video_Ads">Video Ads</string>
    <string name="Category_Packages_activity_Website_Ads">Website Ads</string>
    <string name="Category_Packages_activity_Stores">Stores</string>
    <string name="Category_Packages_activity_Reach">Reach</string>
    <string name="Category_Packages_activity_Image">Image</string>
    <string name="Category_Packages_activity_JOD">JOD</string>
    <string name="Category_Packages_activity_Seconds">Seconds</string>
    <string name="Category_Packages_activity_Custom_Package">Custom Package</string>
    <string name="Category_Packages_activity_Special_Service">Select Your Package &amp; Create Your Ad</string>
    <string name="no_internet_connection_activity_title_label">No Internet Connection</string>
    <string name="no_internet_connection_activity_desc_label">Please check your device\'s connection</string>
    <string name="no_internet_connection_activity_try_again_label">Try Again</string>
    <string name="Create_New_Ad_activity_Individual">Individual</string>
    <string name="Create_New_Ad_activity_Company">Company</string>
    <string name="Create_New_Ad_activity_Title">Title</string>
    <string name="Create_New_Ad_activity_Company_Name">Company Name</string>
    <string name="Create_New_Ad_activity_Description">Description</string>
    <string name="Create_New_Ad_activity_Location">Location</string>
    <string name="Create_New_Ad_activity_Continue">Continue</string>
    <string name="Create_New_Ad_activity_Upload_Image">Upload Image</string>
    <string name="Create_New_Ad_activity_Upload_Video">Upload Video</string>
    <string name="Create_New_Ad_activity_Back_To_Ads">Back To Ads</string>
    <string name="Create_New_Ad_activity_Website">Website</string>
    <string name="Create_New_Ad_activity_Special">Special</string>
    <string name="Summery_activity_Summery">Summary</string>
    <string name="Create_New_product_activity_product_name">Product Name</string>
    <string name="Create_New_product_activity_Price">Price</string>
    <string name="Create_New_product_activity_create">Create</string>
</resources>