<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home_activity_home" />

    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/wallet_icon"
        android:title="@string/home_activity_Wallet" />

    <item
        android:id="@+id/storeFragment"
        android:icon="@drawable/store_icon"
        android:title="@string/home_activity_Stores" />

    <item
        android:id="@+id/arakStoreFragment"
        android:icon="@drawable/arak_store_icon"
        android:title="@string/home_activity_Products" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/more_icon"
        android:title="@string/home_activity_More" />


</menu>