<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.arakadds.arak.presentation.activities.home.fragments.HomeFragment"
        android:label="@string/home_activity_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/walletFragment"
        android:name="com.arakadds.arak.presentation.activities.home.fragments.WalletFragment"
        android:label="@string/home_activity_Wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/storeFragment"
        android:name="com.arakadds.arak.presentation.activities.home.fragments.StoreFragment"
        android:label="@string/home_activity_Stores"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/arakStoreFragment"
        android:name="com.arakadds.arak.presentation.activities.home.fragments.ArakStoreFragment"
        android:label="@string/home_activity_Products"
        tools:layout="@layout/fragment_arak_store" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.arakadds.arak.presentation.activities.home.fragments.ProfileFragment"
        android:label="@string/home_activity_More"
        tools:layout="@layout/fragment_profile" />

</navigation>