<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/new_product_ConstraintLayout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/dots_orange_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/create_product_upload_image_recyclerView_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view18" />

                <ImageView
                    android:id="@+id/new_ad_upload_imageView_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/camera_orange_icon" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/droid_arabic_kufi_regular"
                    android:gravity="center"
                    android:text="Choose your product image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_ad_upload_imageView_id" />

                <View
                    android:id="@+id/view18"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/create_product_product_name_editText_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/filter_background"
                android:ems="10"
                android:hint="@string/Create_New_product_activity_product_name"
                android:inputType="text"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:singleLine="true"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/new_product_ConstraintLayout_id"
                app:layout_constraintStart_toStartOf="@+id/new_product_ConstraintLayout_id"
                app:layout_constraintTop_toBottomOf="@+id/new_product_ConstraintLayout_id" />

            <EditText
                android:id="@+id/create_product_description_editText_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/filter_background"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Description"
                android:inputType="textMultiLine"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="8dp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/create_product_product_name_editText_id"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/create_product_product_name_editText_id"
                app:layout_constraintTop_toBottomOf="@+id/create_product_product_name_editText_id" />

            <LinearLayout
                android:id="@+id/create_product_discount_linearLayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/filter_background"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/create_product_price_editText_id"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/create_product_price_editText_id"
                app:layout_constraintTop_toBottomOf="@+id/create_product_price_editText_id">

                <EditText
                    android:id="@+id/product_discount_Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_10sdp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/create_product_currancy_TextView_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:textSize="@dimen/_16sdp" />
            </LinearLayout>

            <EditText
                android:id="@+id/create_product_price_editText_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/filter_background"
                android:ems="10"
                android:hint="@string/Create_New_product_activity_Price"
                android:inputType="number"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:singleLine="true"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/create_product_description_editText_id"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/create_product_description_editText_id"
                app:layout_constraintTop_toBottomOf="@+id/create_product_description_editText_id" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create_product_create_button_id"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_tow_background"
                android:text="@string/Create_New_product_activity_create"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/create_product_discount_linearLayout_id"
                app:layout_constraintStart_toStartOf="@+id/create_product_discount_linearLayout_id"
                app:layout_constraintTop_toBottomOf="@+id/create_product_discount_linearLayout_id" />

            <ProgressBar
                android:id="@+id/create_product_progressBar_id"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="39dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>